<!--
  ~ Levels Beyond CONFIDENTIAL
  ~
  ~ Copyright 2003 - 2018 Levels Beyond Incorporated
  ~ All Rights Reserved.
  ~
  ~ NOTICE:  All information contained herein is, and remains
  ~ the property of Levels Beyond Incorporated and its suppliers,
  ~ if any.  The intellectual and technical concepts contained
  ~ herein are proprietary to Levels Beyond Incorporated
  ~ and its suppliers and may be covered by U.S. and Foreign Patents,
  ~ patents in process, and are protected by trade secret or copyright law.
  ~ Dissemination of this information or reproduction of this material
  ~ is unlawful and strictly forbidden unless prior written permission is obtained
  ~ from Levels Beyond Incorporated.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.levelsbeyond</groupId>
	<artifactId>reach-engine-jpoller</artifactId>
	<version>1.2.0</version>
	<packaging>jar</packaging>
	<name>Reach Engine - JPoller</name>
	<url>http://www.levelsbeyond.com/</url>
	<properties>
		<skipTests>false</skipTests>
		<!-- maven-compiler-plugin -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.jacoco.plugin.version>0.7.5.201505241946</maven.jacoco.plugin.version>
		<!-- maven-surefire-plugin -->
		<surefire.args>-Xmx512m -XX:MaxPermSize=256m -Djava.awt.headless=true</surefire.args>
		<!-- maven-install-plugin -->
		<installAtEnd>true</installAtEnd>
		<!-- maven-deploy-plugin -->
		<deployAtEnd>true</deployAtEnd>
		<!-- maven-release-plugin -->
		<pushChanges>true</pushChanges>
		<!-- dependency versions -->
		<slf4j.version>1.7.5</slf4j.version>
		<spring.version>3.1.1.RELEASE</spring.version>
		<testng.version>6.12</testng.version>
		<jimfs.version>1.1</jimfs.version>
		<mockito.version>1.10.19</mockito.version>
		<festassert.version>2.0M10</festassert.version>
	</properties>

	<scm>
		<connection>scm:git:git@github.com:levelsbeyond/jpoller.git</connection>
		<developerConnection>scm:git:git@github.com:levelsbeyond/jpoller.git</developerConnection>
		<url>https://github.com/levelsbeyond/jpoller</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>LB-Releases</id>
			<url>https://levelsbeyond.jfrog.io/levelsbeyond/libs-releases-local</url>
		</repository>
		<snapshotRepository>
			<id>LB-Snapshots</id>
			<url>https://levelsbeyond.jfrog.io/levelsbeyond/libs-snapshots-local</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>LB-repository</id>
			<url>https://levelsbeyond.jfrog.io/levelsbeyond/repo/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<id>LB-repository</id>
			<url>https://levelsbeyond.jfrog.io/levelsbeyond/repo/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<defaultGoal>install</defaultGoal>
		<plugins>


			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${maven.jacoco.plugin.version}</version>
				<executions>
					<!--
						Prepares the property pointing to the JaCoCo runtime agent which
						is passed as VM argument when Maven the Surefire plugin is executed.
					-->
					<execution>
						<id>pre-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<!--
								Sets the name of the property containing the settings
								for JaCoCo runtime agent.
							-->
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<!--
						Ensures that the code coverage report for unit tests is created after
						unit tests have been run.
					-->
					<execution>
						<id>post-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${surefire.args} ${surefireArgLine}</argLine>
					<systemPropertyVariables>
						<java.awt.headless>true</java.awt.headless>
						<log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.14.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.sadun</groupId>
			<artifactId>util</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<!-- testing -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>com.google.jimfs</groupId>
		  <artifactId>jimfs</artifactId>
		  <version>${jimfs.version}</version>
		  <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-all</artifactId>
		  <version>${mockito.version}</version>
		  <scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>org.easytesting</groupId>
		  <artifactId>fest-assert-core</artifactId>
		  <version>${festassert.version}</version>
		  <scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>tests</id>
			<properties>
				<implTarget>${basedir}/src/test/java</implTarget>
				<srcgenRoot>${basedir}/src</srcgenRoot>
			</properties>
		</profile>
		<profile>
			<id>normal</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<implTarget>${basedir}/src/main/java</implTarget>
				<srcgenRoot>${basedir}/src/main/resources</srcgenRoot>
			</properties>
		</profile>
	</profiles>
</project>
